--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,23 @@
-<form method=post>
-    <dl>
-      {{ render_field(form.name) }}
-      {{ render_field(form.token) }}
-      {{ render_field(form.qnum) }}
-    </dl>
-    <p><input type=submit value=Submit>
-  </form>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Login</title>
+</head>
+<body>
+
+  {% if message %}
+    <p>{{ message }}</p>
+  {% endif %}
+    <form action="" method="post">
+      <p>
+    <label for="url">URL</label>
+    <input type="text" name="url">
+    </p>
+    <p>
+    <input type="submit">
+    </p>
+    </form>
+    
+</body>
+</html>
