--- a/templates/index.html
+++ b/templates/index.html
@@ -2,21 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Login</title>
 </head>
 <body>
 
   {% if message %}
     <p>{{ message }}</p>
   {% endif %}
-    <form action="" method="post">
+    <form method="post">
       <p>
-    <label for="url">URL</label>
-    <input type="text" name="url">
-    </p>
-    <p>
-    <input type="submit">
-    </p>
+        <label for="url">URL</label>
+        <input type="text" name="url">
+      </p>
+      <p>
+        <input type="submit">
+      </p>
     </form>
     
 </body>
